--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,12 @@ body {
 }
 
 .option {
-	margin: 10px;
+	margin: 70px 30px -10px 0;
+	display: inline-block;
+}
+
+.btn-choice {
+	margin: 7px 0 0 0;
 }
 
 .information {
