--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,22 @@ body {
 	text-shadow: 0 1px #bbb;
 }
 
-.question {
+.num-question {
 	margin-top: 20px;
 	font-size: 40px;
 	text-shadow: 0 1px #bbb;
 }
 
+.question {
+	margin-top: 20px;
+	margin-bottom: -20px;
+	font-size: 20px;
+	color: #fff;
+	text-shadow: 0 1px #333;
+}
+
 .option {
-	margin: 70px 30px -10px 0;
+	margin: 50px 30px -10px 0;
 	display: inline-block;
 }
 
