--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@ body {
 	font-family: 'Comic Sans', 'Tahoma';
 }
 
+hr {
+	margin: 50px 0 50px 0;
+	opacity: 0;
+}
+
 .logo {
 	margin-top: 90px;
 	font-size: 90px;
